Mon Oct 27 16:45:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/RTCORBA/Server_Declared/server.cpp:
        * tests/RTCORBA/Server_Protocol/server.cpp:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_MCast_Federated/EchoEventSupplierMain.cpp:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_MCast_Federated/EchoEventConsumerMain.cpp:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Federated/EchoEventSupplierMain.cpp:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Federated/EchoEventConsumerMain.cpp:
        * tests/RTCORBA/Client_Protocol/client.cpp:
        * tests/RTCORBA/Client_Protocol/server.cpp:
        * tests/RTCORBA/MT_Client_Protocol_Priority/client.cpp:

          sscanf needs ACE_TEXT_ALWAYS_CHAR ()

Mon Oct 27 14:40:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/DevGuideExamples/EventServices/OMG_TypedEC/ConsumerMain.cpp:

          ACE_LIB_TEXT -> ACE_TEXT.

Mon Oct 27 12:40:47 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * NEWS:

          Updated the news file about the feater added in Bug#3444.

Mon Oct 27 12:31:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TAO_Internal.cpp:
          Small improvement to debug message

Sun Oct 26 08:26:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/AMH/run_test.pl
        * DevGuideExamples/AMH_AMI/run_test.pl
        * DevGuideExamples/BiDirectionalGIOP/run_test.pl
        * DevGuideExamples/GettingStarted/run_test.pl
        * LocalObjects/ServantLocator/run_test.pl
        * Messaging/AMIcallback/run_test.pl
        * Messaging/RelativeRoundtripTimeout/run_test.pl
        * Multithreading/GracefulShutdown/run_test.pl
        * Multithreading/Reactive/run_test.pl
        * Multithreading/ThreadPerConnection/run_test.pl
        * Multithreading/ThreadPool/run_test.pl
        * PortableInterceptors/PICurrent/run_test.pl