@@ -339,6 +339,7 @@ namespace TAO {
   template <typename stream, typename charT>
   bool demarshal_sequence(stream & strm, TAO::unbounded_basic_string_sequence <charT> & target) {
     typedef TAO::unbounded_basic_string_sequence <charT> sequence;
+    typedef typename sequence::element_traits::string_var string_var;
     ::CORBA::ULong new_length = 0;
     if (!(strm >> new_length)) {
       return false;
@@ -349,8 +350,12 @@ namespace TAO {
     sequence tmp(new_length);
     tmp.length(new_length);
     for(CORBA::ULong i = 0; i < new_length; ++i) {
-      if (!(strm >> static_cast<charT *&> (tmp[i].out ()))) {
+      string_var string;
+      if (!(strm >> string.inout ())) {
         return false;
+      }
+      else {
+        tmp[i] = string._retn ();
       }
     }
     tmp.swap(target);
